# code-diagnotic-base

./: CMakeLists.txt  README.md
src/: #main.cpp#  CompilationDatabase.cpp  main.cpp
src/includes/: CompilationDatabase.hpp
